Maat Config in Authlete

--- a/authlete.properties
+++ b/authlete.properties
@@ -21,7 +21,7 @@
 #   you are using a dedicated server, please contact "Authlete, Inc."
 #   <support@authlete.com> about the URL of your dedicated Authlete server.
 #
-base_url = https://api.authlete.com
+#base_url = https://eu.authlete.com
 
 
 # service.api_key
@@ -38,12 +38,15 @@ base_url = https://api.authlete.com
 #   to avoid writing a plain secret key in this configuration file. See the
 #   JavaDoc of AuthletePropertiesConfiguration for details.
 #
-service.api_key = 5593494639
-service.api_secret = AAw0rner_-y1A6J9s20wjRCpkBvez3GxEBoL9jOJVR0
+#service.api_key = 5593494639
+#service.api_secret = AAw0rner_-y1A6J9s20wjRCpkBvez3GxEBoL9jOJVR0
 
 # For Authlete 3.0
 #
-#api_version = V3
-#base_url = https://nextdev-api.authlete.net
-#service.api_key = 986126671
-#service.access_token =
+#service.api_key = <<Service_ID>>
+#service.access_token = <<SERVICE_ACCESS_TOKEN>>
+
+api_version = V3
+base_url = https://eu.authlete.com
+service.api_key = 521193873
+service.access_token = T31OUZC3BK5M2JxO9kA-F4u2U6o3i8Ja7mT6f_-KlL0
